--- a/.github/workflows/03-integration_base.yml
+++ b/.github/workflows/03-integration_base.yml
@@ -434,3 +434,16 @@ jobs:
         with:
           name: image-info
           path: image-info.env
+  # ───────────────────────────────────────────────────────────
+  # Job 6: Crear PR a Main
+  # ───────────────────────────────────────────────────────────
+  create-pr-to-integration:
+    name: Create PR to Integration
+    needs: [build-image-pre, build-image-staging, build-image-pro]
+    uses: dariasmoises979-blip/pipeline-build/.github/workflows/pull-request.yml@main
+    with:
+      source_branch: 'integration'
+      target_branch: 'main'
+      pr_title: '🚀 Deploy integration to main'
+      environment: 'integration'
+      labels: 'automated,deployment,main,integretation'
