--- a/.github/workflows/04-base_deployment_main.yml
+++ b/.github/workflows/04-base_deployment_main.yml
@@ -120,18 +120,23 @@ jobs:
     needs: determine-environment
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/build-image.yml@main
     with:
-      docker_image: "mi-aplicacion"  # 👈 Cambiar por tu nombre de imagen
-      dockerhub_username: "tu-usuario"  # 👈 Cambiar por tu usuario de Docker Hub
-      environment: ${{ needs.determine-environment.outputs.environment }}
-      dockerfile_path: "./Dockerfile"
-      build_context: "."
-      # Opcional: si necesitas clonar un repo externo
-      # external_repo: "usuario/repo-externo"
-      # external_repo_ref: "main"
-      # external_repo_path: "./external"
+        docker_image: mi-aplicacion
+        dockerhub_username: dariasmoises979
+        environment: qa
+        
+        # Configuración del repo externo
+        external_repo: dariasmoises979-blip/app
+        external_repo_ref: main
+        external_repo_path: ./app-repo
+        
+        # Rutas del build
+        dockerfile_path: ./app-repo/local/Dockerfile
+        build_context: ./app-repo                    # ✅ Sin barra final (correcto)
+        
     secrets:
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-      # EXTERNAL_REPO_TOKEN: ${{ secrets.EXTERNAL_REPO_TOKEN }}
+        DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        EXTERNAL_REPO_TOKEN: ${{ secrets.GH_TOKEN2}}
+  
 
   # ═══════════════════════════════════════════════════════════
   # 📊 JOB 3: MOSTRAR TAG GENERADO
