--- a/.github/workflows/03-integration_base.yml
+++ b/.github/workflows/03-integration_base.yml
@@ -96,12 +96,137 @@ jobs:
       EXTERNAL_REPO_TOKEN: ${{ secrets.GH_TOKEN2}}
 
   # ═══════════════════════════════════════════════════════════
-  # JOB 3: SECURITY SCAN - SEPARADO POR AMBIENTE
+  # JOB 3: GUARDAR INFORMACIÓN DE TAGS (CRÍTICO PARA DEPLOYMENT)
+  # ═══════════════════════════════════════════════════════════
+  save-image-tags:
+    name: 💾 Save Image Tags Info
+    runs-on: ubuntu-latest
+    needs: [build-image-pre, build-image-staging, build-image-pro]
+    steps:
+      - name: Create Tags Info File
+        run: |
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "💾 SAVING BUILD TAGS INFORMATION"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          
+          # Crear archivo con información de los tags
+          cat > image-tags.json << EOF
+          {
+            "dockerhub_username": "dariasmoises979",
+            "docker_image": "mi-aplicacion",
+            "build_timestamp": "$(date -u +'%Y-%m-%d %H:%M:%S UTC')",
+            "workflow_run_id": "${{ github.run_id }}",
+            "commit_sha": "${{ github.sha }}",
+            "branch": "${{ github.ref_name }}",
+            "environments": {
+              "pre": {
+                "tag": "${{ needs.build-image-pre.outputs.image_tag }}",
+                "full_image": "${{ needs.build-image-pre.outputs.full_image }}",
+                "short_sha": "${{ needs.build-image-pre.outputs.short_sha }}"
+              },
+              "staging": {
+                "tag": "${{ needs.build-image-staging.outputs.image_tag }}",
+                "full_image": "${{ needs.build-image-staging.outputs.full_image }}",
+                "short_sha": "${{ needs.build-image-staging.outputs.short_sha }}"
+              },
+              "pro": {
+                "tag": "${{ needs.build-image-pro.outputs.image_tag }}",
+                "full_image": "${{ needs.build-image-pro.outputs.full_image }}",
+                "short_sha": "${{ needs.build-image-pro.outputs.short_sha }}"
+              }
+            }
+          }
+          EOF
+          
+          # También crear archivo .env para fácil lectura
+          cat > image-tags.env << EOF
+          DOCKERHUB_USERNAME=dariasmoises979
+          DOCKER_IMAGE=mi-aplicacion
+          BUILD_TIMESTAMP=$(date -u +'%Y-%m-%d_%H-%M-%S')
+          WORKFLOW_RUN_ID=${{ github.run_id }}
+          COMMIT_SHA=${{ github.sha }}
+          BRANCH=${{ github.ref_name }}
+          
+          # Tags por ambiente
+          TAG_PRE=${{ needs.build-image-pre.outputs.image_tag }}
+          FULL_IMAGE_PRE=${{ needs.build-image-pre.outputs.full_image }}
+          
+          TAG_STAGING=${{ needs.build-image-staging.outputs.image_tag }}
+          FULL_IMAGE_STAGING=${{ needs.build-image-staging.outputs.full_image }}
+          
+          TAG_PRO=${{ needs.build-image-pro.outputs.image_tag }}
+          FULL_IMAGE_PRO=${{ needs.build-image-pro.outputs.full_image }}
+          EOF
+          
+          echo "✅ Files created:"
+          echo "   • image-tags.json"
+          echo "   • image-tags.env"
+          echo ""
+          echo "📋 Content preview (JSON):"
+          cat image-tags.json
+          echo ""
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+
+      - name: Upload Tags as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-image-tags
+          path: |
+            image-tags.json
+            image-tags.env
+          retention-days: 30
+
+      - name: Checkout Pipeline Repo
+        uses: actions/checkout@v4
+        with:
+          repository: dariasmoises979-blip/pipeline-build
+          token: ${{ secrets.GH_TOKEN2 }}
+          path: pipeline-build
+
+      - name: Save Tags to Repository
+        run: |
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "💾 SAVING TAGS TO REPOSITORY"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          
+          # Crear directorio de cache si no existe
+          mkdir -p pipeline-build/.github/cache
+          
+          # Copiar archivos de tags
+          cp image-tags.json pipeline-build/.github/cache/latest-tags.json
+          cp image-tags.env pipeline-build/.github/cache/latest-tags.env
+          
+          # Configurar Git
+          cd pipeline-build
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Commit y push
+          git add .github/cache/
+          git commit -m "🏷️ Update image tags from build ${{ github.run_id }}
+
+          Build Information:
+          - Branch: ${{ github.ref_name }}
+          - Commit: ${{ github.sha }}
+          - Workflow: ${{ github.workflow }}
+          - Run ID: ${{ github.run_id }}
+          
+          Tags Generated:
+          - PRE: ${{ needs.build-image-pre.outputs.image_tag }}
+          - STAGING: ${{ needs.build-image-staging.outputs.image_tag }}
+          - PRO: ${{ needs.build-image-pro.outputs.image_tag }}" || echo "No changes to commit"
+          
+          git push
+          
+          echo "✅ Tags saved to repository:"
+          echo "   • .github/cache/latest-tags.json"
+          echo "   • .github/cache/latest-tags.env"
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+
+  # ═══════════════════════════════════════════════════════════
+  # JOB 4: SECURITY SCAN - SEPARADO POR AMBIENTE
   # ═══════════════════════════════════════════════════════════
   
-  # ──────────────────────────────────────────────────────────
-  # Security Scan - Ambiente PRE
-  # ──────────────────────────────────────────────────────────
   security-pre:
     name: 🔐 Security Scan - PRE
     needs: build-image-pre
@@ -130,7 +255,6 @@ jobs:
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
   # ──────────────────────────────────────────────────────────
   # Security Scan - Ambiente PRO
   # ──────────────────────────────────────────────────────────
@@ -148,9 +272,8 @@ jobs:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   # ═══════════════════════════════════════════════════════════
-  # JOB 4: BUILD HÍBRIDO - SEPARADO POR AMBIENTE
+  # JOB 5: BUILD HÍBRIDO - SEPARADO POR AMBIENTE
   # ═══════════════════════════════════════════════════════════
-  
   # ──────────────────────────────────────────────────────────
   # Build Híbrido - Ambiente PRE
   # ──────────────────────────────────────────────────────────
@@ -224,7 +347,7 @@ jobs:
       EXTERNAL_REPO_TOKEN: ${{ secrets.GH_TOKEN2}}
 
   # ═══════════════════════════════════════════════════════════
-  # JOB 5: MAIN PIPELINE - SEPARADO POR AMBIENTE
+  # JOB 6: MAIN PIPELINE - SEPARADO POR AMBIENTE
   # ═══════════════════════════════════════════════════════════
   
   # ──────────────────────────────────────────────────────────
@@ -354,7 +477,7 @@ jobs:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   # ═══════════════════════════════════════════════════════════
-  # JOB 6: RESUMEN FINAL (OPCIONAL)
+  # JOB 7: RESUMEN FINAL
   # ═══════════════════════════════════════════════════════════
   summary:
     name: 📊 Resumen Final del Pipeline
@@ -368,6 +491,7 @@ jobs:
       - main-pipeline-pre
       - main-pipeline-staging
       - main-pipeline-pro
+      - save-image-tags
     runs-on: ubuntu-latest
     if: always()
     
@@ -393,57 +517,25 @@ jobs:
           echo "| PRO | ${{ needs.security-pro.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          echo "### 🔄 Build Híbrido" >> $GITHUB_STEP_SUMMARY
-          echo "| Ambiente | Estado |" >> $GITHUB_STEP_SUMMARY
-          echo "|----------|--------|" >> $GITHUB_STEP_SUMMARY
-          echo "| PRE | ${{ needs.hybrid-pre.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| STAGING | ${{ needs.hybrid-staging.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| PRO | ${{ needs.hybrid-pro.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          echo "### 🚀 Pipeline Completo" >> $GITHUB_STEP_SUMMARY
-          echo "| Ambiente | Estado |" >> $GITHUB_STEP_SUMMARY
-          echo "|----------|--------|" >> $GITHUB_STEP_SUMMARY
-          echo "| PRE | ${{ needs.main-pipeline-pre.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| STAGING | ${{ needs.main-pipeline-staging.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| PRO | ${{ needs.main-pipeline-pro.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "### 💾 Guardado de Tags" >> $GITHUB_STEP_SUMMARY
+          echo "| Estado |" >> $GITHUB_STEP_SUMMARY
+          echo "|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| ${{ needs.save-image-tags.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
           echo "---" >> $GITHUB_STEP_SUMMARY
-          echo "🎯 **Acción**: Revisa los artefactos de cada ambiente en la sección de Artifacts" >> $GITHUB_STEP_SUMMARY
+          echo "🎯 **Los tags han sido guardados y están listos para deployment automático**" >> $GITHUB_STEP_SUMMARY
 
-
-      
   # ═══════════════════════════════════════════════════════════
-  # JOB 7: SAVE IMAGE INFO
+  # JOB 8: CREAR PR A MAIN (TRIGGER PARA DEPLOYMENT)
   # ═══════════════════════════════════════════════════════════
-  save-image-info:
-    name: 🧾 Save built image info
-    runs-on: ubuntu-latest
-    needs: [build-image-pre, build-image-staging, build-image-pro]
-    steps:
-      - name: Create image info file
-        run: |
-          echo "IMAGE_NAME=dariasmoises979/mi-aplicacion" > image-info.env
-          echo "TAG_PRE=pre-${{ github.run_number }}" >> image-info.env
-          echo "TAG_STAGING=staging-${{ github.run_number }}" >> image-info.env
-          echo "TAG_PRO=prod-${{ github.run_number }}" >> image-info.env
-
-      - name: Upload image info artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: image-info
-          path: image-info.env
-  # ───────────────────────────────────────────────────────────
-  # Job 6: Crear PR a Main
-  # ───────────────────────────────────────────────────────────
-  create-pr-to-integration:
-    name: Create PR to Integration
-    needs: summary
+  create-pr-to-main:
+    name: 📤 Create PR to Main
+    needs: [summary, save-image-tags]
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/pull-request.yml@main
     with:
       source_branch: 'integration'
       target_branch: 'main'
       pr_title: '🚀 Deploy integration to main'
       environment: 'integration'
-      labels: 'automated,deployment,main,integretation'
+      labels: 'automated,deployment,main,integration'
