--- a/.github/workflows/04-base_deployment_main.yml
+++ b/.github/workflows/04-base_deployment_main.yml
@@ -10,7 +10,7 @@ name: Deploy to Environments
 on:
   push:
     branches:
-      - integration
+      - main
 
   # Permitir ejecución manual para re-deploys
   workflow_dispatch:
