--- a/.github/workflows/03-integration_base.yml
+++ b/.github/workflows/03-integration_base.yml
@@ -399,6 +399,7 @@ jobs:
           name: image-info
           path: image-info.env
           retention-days: 30
+          overwrite: true
 
   # ═══════════════════════════════════════════════════════════
   # JOB 7: RESUMEN FINAL (MANTENIDO DEL ORIGINAL)
