--- a/.github/workflows/03-integration_base.yml
+++ b/.github/workflows/03-integration_base.yml
@@ -396,7 +396,7 @@ jobs:
       - name: Upload image info artifact
         uses: actions/upload-artifact@v4
         with:
-          name: image-info
+          name: image-info.env
           path: image-info.env
           retention-days: 30
           overwrite: true
