--- a/.github/workflows/03-integration_base.yml
+++ b/.github/workflows/03-integration_base.yml
@@ -112,7 +112,7 @@ jobs:
       image_tag: "pre"
       dockerhub_username: "dariasmoises979"
       enable_sonar: true
-      artifact_name: "security-reports-pre-${{ github.run_id }}"
+      artifact_name: "security-reports-pre-${{ github.run_id }}"  # 🆕 NOMBRE ÚNICO
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -129,7 +129,7 @@ jobs:
       image_tag: "staging"
       dockerhub_username: "dariasmoises979"
       enable_sonar: true
-      artifact_name: "security-reports-staging-${{ github.run_id }}"
+      artifact_name: "security-reports-staging-${{ github.run_id }}"  # 🆕 NOMBRE ÚNICO
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -146,7 +146,7 @@ jobs:
       image_tag: "pro"
       dockerhub_username: "dariasmoises979"
       enable_sonar: true
-      artifact_name: "security-reports-pro-${{ github.run_id }}" 
+      artifact_name: "security-reports-pro-${{ github.run_id }}"  # 🆕 NOMBRE ÚNICO
     secrets:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -399,10 +399,9 @@ jobs:
       - name: Upload image info artifact
         uses: actions/upload-artifact@v4
         with:
-          name: image-info.env
+          name: image-info
           path: image-info.env
           retention-days: 30
-          overwrite: true
 
   # ═══════════════════════════════════════════════════════════
   # JOB 7: RESUMEN FINAL (MANTENIDO DEL ORIGINAL)
