--- a/.github/workflows/01-test-base.yml
+++ b/.github/workflows/01-test-base.yml
@@ -9,14 +9,23 @@ on:
   # ───────────────────────────────────────────────────────────
 jobs:
   test:
-    name: Run Unit Tests
     uses: dariasmoises979-blip/pipeline-build/.github/workflows/test.yml@main
     with:
-      # Configuración del repo externo
       external_repo: dariasmoises979-blip/app
       external_repo_ref: main
       external_repo_path: ./app-repo
+      projectBaseDir: "./pipeline-build"  # ✅ Nuevo
+      sonar_args: >
+        -Dsonar.organization=dariasmoises979-blip
+        -Dsonar.projectKey=dariasmoises979-blip_app
+        -Dsonar.projectName=app
+        -Dsonar.python.version=3.10
+        -Dsonar.sources=system_info_app
+        -Dsonar.tests=system_info_app/test
+        -Dsonar.test.inclusions=**/test/**,**/tests/**
+        -Dsonar.coverage.exclusions=**/test/**,**/tests/**
     secrets:
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       EXTERNAL_REPO_TOKEN: ${{ secrets.GH_TOKEN2 }}
   # ───────────────────────────────────────────────────────────
   # Job 2: Llamar al workflow reusable de merge DEV
